# e-RHINO

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
docs/: api.md  conf.py  design.md  index.md  limtod-port-contract.md  operators.md  tour.md
examples/: bayesian_and_uncertainty.py  neural_surrogate.py  radio_digital_twin.py  render_signal_path.py  sky_projection_and_filters.py
src/dirt/: __init__.py
src/dirt/core/: __init__.py  combinators.py  coordinates.py  environment.py  errors.py  graph.py  operator.py  pipeline.py  render.py  state.py
src/dirt/inference/: __init__.py  calibrate.py  forward.py  numpyro_bridge.py  uncertainty.py
src/dirt/radio/: __init__.py  graph.py  surrogate.py
src/dirt/radio/backend/: __init__.py  averaging.py  flagging.py
src/dirt/radio/environment/: __init__.py  atmosphere.py  ground.py  ionosphere.py  rfi.py
src/dirt/radio/filters/: __init__.py  base.py  fourier.py  sidereal.py  skyspace.py
src/dirt/radio/instrument/: __init__.py  adc.py  beam.py  calibration.py  emi.py  gain.py  noise.py  noise_wave.py  receiver.py
src/dirt/radio/sky/: __init__.py  foregrounds.py  global_signal.py  model.py  native.py  point_sources.py  projection.py  source.py  uniform.py
src/erhino/: __init__.py
src/erhino/core/: __init__.py  combinators.py  coordinates.py  environment.py  errors.py  frozen.py  graph.py  operator.py  pipeline.py  render.py  state.py
src/erhino/inference/: __init__.py  calibrate.py  forward.py  likelihood.py  numpyro_bridge.py  uncertainty.py
src/erhino/radio/: __init__.py  adc.py  backend.py  beam.py  gain.py  graph.py  noise.py  receiver.py  sky.py  surrogate.py
src/erhino/radio/backend/: __init__.py  averaging.py  flagging.py
src/erhino/radio/environment/: __init__.py  ground.py  ionosphere.py  rfi.py
src/erhino/radio/filters/: __init__.py  base.py  fourier.py  sidereal.py  skyspace.py
src/erhino/radio/instrument/: __init__.py  adc.py  beam.py  calibration.py  emi.py  gain.py  noise.py  noise_wave.py  receiver.py
src/erhino/radio/sky/: __init__.py  foregrounds.py  global_signal.py  model.py  native.py  point_sources.py  projection.py  source.py  uniform.py
tests/: conftest.py  test_end_to_end.py
tests/core/: test_combinators.py  test_coordinates.py  test_frozen.py  test_graph.py  test_layering.py  test_operator.py  test_pipeline.py  test_snapshot.py  test_state.py
tests/inference/: test_forward.py  test_numpyro_bridge.py  test_uncertainty.py
tests/radio/: test_assemble.py  test_components.py  test_filters.py  test_flagging_momentrfi.py  test_placeholders.py  test_sky_abstraction.py  test_surrogate.py
