[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erhino"
version = "0.1.0"
description = "Differentiable scientific pipeline framework (JAX + Equinox); first application: the RHINO radio telescope digital twin"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Zheng Zhang" }]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.5",
    "equinox>=0.13",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
numpyro = ["numpyro"]

[project.urls]
Repository = "https://github.com/zzhang0123/e-RHINO"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/erhino"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# E741: single-character names (l, I, O) are standard physics notation
ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["erhino"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abc.abstractmethod",
]
