[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dirt-telescope"
version = "0.1.0"
description = "DIRT — Differentiable Instrument Response Twin: a differentiable scientific pipeline framework (JAX + Equinox) for single-antenna radio telescopes"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Zheng Zhang" }]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.5",
    "equinox>=0.13",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
numpyro = ["numpyro"]
docs = [
    "sphinx>=7",
    "myst-parser",
    "furo",
    "sphinx-copybutton",
    "sphinxcontrib-mermaid",
]

[project.urls]
Repository = "https://github.com/zzhang0123/dirt-telescope"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dirt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# E741: single-character names (l, I, O) are standard physics notation
ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=dirt --cov-fail-under=80"

[tool.coverage.run]
source = ["dirt"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abc.abstractmethod",
]
